syntax = "proto3";
package post;

option go_package = ".";

message PostRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string designation = 4;
}

message PostResponse {
  string id = 1;
}