syntax = "proto3";
package users;

option go_package = ".";

message User{
  string firstName = 2;
  string lastName = 3;
  string email = 4;
}

message Employee{
  string userId = 1;
  string designation = 2;
}